syntax = "proto3";

package cart;

service CartService {
  rpc GetCartDetails (UserIdRequest) returns (CartDetailsResponse);
  rpc ClearCart (UserIdRequest) returns (ClearCartResponse);
}

message UserIdRequest {
  string userId = 1;
}

message CartItem {
  string productId = 1;
  string description = 2;
  string color = 3;
  string size = 4;
  int32 quantity = 5;
  int32 price = 6;
}

message CartDetailsResponse {
  repeated CartItem items = 1;
}

message ClearCartResponse {
  bool success = 1;
}